fixed bug with aboutSection alignment

--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -170,7 +170,7 @@
   .aboutBoxes {
     position: absolute;
     top: 450px;
-    left: 15%;
+    left: 12%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
